# insurance-pdf-extractor

./: .dockerignore  .dvcignore  .env example  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-build.sh  docker-compose.override.yml  docker-compose.yml  mvp_frontend.html  pyproject.toml  pytest.ini  requirements.txt  test_pdfs.dvc  updated_frontend.html
.dvc/: config
app/: main.py
app/api/routes/: analytics.py  api_routes_extraction.py  extraction.py  health.py  storage.py
app/core/: config.py  exceptions.py  security.py
app/models/: extraction.py  request.py  response.py
app/services/: document_detector.py  gemini.py  pdf_processor.py  prompt_manager.py  storage.py
app/utils/: file_helpers.py  helpers.py  response_helpers.py  validators.py
config/: fields.yaml  prompts.yaml
scripts/: count_tokens.py  manage_storage.py  migrate_database.py  token_analytics.py
tests/: conftest.py  test_validation.py
tests/mock_data/: create_mock_pdf.py
tests/test_api/: test_extraction.py
tests/test_core/: test_security.py
tests/test_services/: test_gemini_service.py  test_pdf_processor.py  test_prompt_manager.py  test_storage.py
tests/test_utils/: test_file_helpers.py  test_helpers.py  test_response_helpers.py  test_validators.py
